--- a/Lab4/src/main/resources/static/pointcheck.html
+++ b/Lab4/src/main/resources/static/pointcheck.html
@@ -88,8 +88,8 @@
                     <line x1="150" y1="0" x2="150" y2="300" stroke="#000720"/>
                     <polygon points="300,150 295,155 295, 145" fill="#000720" stroke="#000720"/>
                     <polygon points="150,0 145,5 155,5" fill="#000720" stroke="#000720"/>
-                    <rect id="rect" x="30" y="30" width="120" height="120" fill-opacity="0.4" stroke="navy" fill="blue"/>
-                    <polygon id="triangle" points="150,150 150,210 90,150" fill-opacity="0.4" stroke="navy" fill="blue"/>
+                    <rect id="rect" x="30" y="150" width="120" height="60" fill-opacity="0.4" stroke="navy" fill="blue"/>
+                    <polygon id="triangle" points="150,150 150,90 90,150" fill-opacity="0.4" stroke="navy" fill="blue"/>
                     <path id="path" d="M 150 150 L 270 150 C 270 210 210 270 150 270 Z" fill-opacity="0.4" stroke="navy" fill="blue"/>
                 </svg>
             </td>
@@ -102,25 +102,25 @@
             <td>Выберите R:</td>
             <td>
                 <div id="R">
-                    <input type="radio" value="-3" v-model="user2">
+                    <input type="radio" value="-3" v-model="user2" onclick="refrR">
                     <label>-3</label>
-                    <input type="radio" value="-2" v-model="user2">
+                    <input type="radio" value="-2" v-model="user2" onclick="refrR">
                     <label>-2</label>
-                    <input type="radio" value="-1" v-model="user2">
+                    <input type="radio" value="-1" v-model="user2" onclick="refrR">
                     <label>-1</label>
                     <br>
-                    <input type="radio" value="0" v-model="user2">
+                    <input type="radio" value="0" v-model="user2" onclick="refrR">
                     <label>0</label>
-                    <input type="radio" value="1" v-model="user2">
+                    <input type="radio" value="1" v-model="user2" onclick="refrR">
                     <label>1</label>
-                    <input type="radio" value="2" v-model="user2">
+                    <input type="radio" value="2" v-model="user2" onclick="refrR">
                     <label>2</label>
                     <br>
-                    <input type="radio" value="3" v-model="user2">
+                    <input type="radio" value="3" v-model="user2" onclick="refrR">
                     <label>3</label>
-                    <input type="radio" value="4" v-model="user2">
+                    <input type="radio" value="4" v-model="user2" onclick="refrR">
                     <label>4</label>
-                    <input type="radio" value="5" v-model="user2">
+                    <input type="radio" value="5" v-model="user2" onclick="refrR">
                     <label>5</label>
                     <br>
                     <span>Выбрано: {{ user2 }}</span>
@@ -147,7 +147,7 @@
         </tr>
     </tbody>
     <tfoot>
-    <tr id="outputContainer"><td colspan="7"><h4><span class="outputStub notification">Результаты отсутствуют</span></h4></td></tr>
+<!--    <tr id="outputContainer"><td colspan="7"><h4><span class="outputStub notification">Результаты отсутствуют</span></h4></td></tr>-->
     <tr>
         <td colspan="7">
             <table id="resTable">
@@ -203,6 +203,11 @@
         });
     });
 
+    function refrR(){
+        r = R.user2;
+        redrawGraph();
+    }
+
     function save(){
         y = document.querySelector("#Y-input").value.replace(",", ".");
         x = V.user;
@@ -233,33 +238,39 @@
     }
 
     function redrawGraph() {
-        let outputContainer = document.getElementById("outputContainer");
-        if (outputContainer !== null) outputContainer.parentNode.removeChild(outputContainer);
-        rect.setAttribute("width", `${r * 24}`);
-        rect.setAttribute("height", `${r * 24}`);
-        rect.setAttribute("x", `${150 - r * 24}`);
-        rect.setAttribute("y", `${150 - r * 24}`);
-        triangle.setAttribute("points", `150,150 150,${150 + 12 * r} ${150 - 12 * r},150`);
-        let k = (r !== 5) ? ((5 - r) * 12) : 0;
-        path.setAttribute("d", `M 150 150 L ${150 + r * 24} 150 C ${150 + r * 24} ${210 - k} ${210 - k} ${150 + r * 24} 150 ${150 + r * 24} Z`);
+        //let outputContainer = document.getElementById("outputContainer");
+        //if (outputContainer !== null) outputContainer.parentNode.removeChild(outputContainer);
+        rect.setAttribute("width", `${5 * 24}`);
+        rect.setAttribute("height", `${5 * 12}`);
+        rect.setAttribute("x", `${150 - 5 * 24}`);
+        rect.setAttribute("y", `${150 + 5 * 0}`);
+        triangle.setAttribute("points", `150,150 150,${150 - 12 * 5} ${150 - 12 * 5},150`);
+        let k = 0;
+        path.setAttribute("d", `M 150 150 L ${150 + 5 * 24} 150 C ${150 + 5 * 24} ${210 - k} ${210 - k} ${150 + 5 * 24} 150 ${150 + 5 * 24} Z`);
         setTimeout(loadDots, 400); //нужно дождаться получения dom с обновлённой таблицей, иначе новая точка не появляется на графике - МЕГАКОСТЫЛЬ
     }
 
     function loadDots() {
         let oldDots = document.querySelectorAll("circle");
         oldDots.forEach(dot => dot.parentNode.removeChild(dot));
-        let table = document.getElementById("resTable");
-        for (let i = 1; table.rows.length; ++i) {
-            let cells = table.rows.item(i).cells;
+        let table = app.messages;
+        for (let i = 0; i < table.length; i++) {
+            let cells = table[i];
             let dotCoords = {
-                x: parseFloat(cells.item(0).innerHTML.trim()) / r * 125 + 150,
-                y: 150 - parseFloat(cells.item(1).innerHTML.trim()) / r * 125
+                x: parseFloat(cells.x) / r * 125 + 150,
+                y: 150 - parseFloat(cells.y) / r * 125
             };
             let dot = document.createElementNS("http://www.w3.org/2000/svg", "circle");
             dot.setAttribute("r", "5");
             dot.setAttribute("cx", `${dotCoords.x}`);
             dot.setAttribute("cy", `${dotCoords.y}`);
-            dot.setAttribute("fill", cells.item(3).innerHTML.trim() === "true" ? "green" : "red");
+            if(cells.isCoordsStatus){
+                dot.setAttribute("fill", "green");
+            }else{
+                dot.setAttribute("fill", "red");
+            }
+            //dot.setAttribute("fill", cells.isCoordsStatus === "true" ? "green" : "red");
+            console.log(cells.isCoordsStatus);
             svg.appendChild(dot);
         }
     }
